[gd_scene load_steps=16 format=3 uid="uid://cqk5nkciehnl8"]

[ext_resource type="FontFile" path="res://fontBase.tres" id="1"]
[ext_resource type="Texture2D" uid="uid://cs2xsi6jalx2t" path="res://Media/imatges/mainmenu/olimpicring.png" id="2"]
[ext_resource type="FontFile" uid="uid://chgq8h7yweu8u" path="res://Media/Fonts/zero_cool/ZeroCool.ttf" id="3"]
[ext_resource type="Texture2D" uid="uid://c05vce2fpphaw" path="res://Media/imatges/mainmenu/background.png" id="4"]
[ext_resource type="Script" path="res://MainMenu/MainMenu.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://ufbl6upggo86" path="res://Media/imatges/capdalls.png" id="6_tghwv"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(74, 16)

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(80, 20)

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="RectangleShape2D" id="7"]
size = Vector2(90, 20)

[sub_resource type="FontFile" id="8"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="RectangleShape2D" id="11"]
size = Vector2(94, 20)

[sub_resource type="FontFile" id="9"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="RectangleShape2D" id="10"]
size = Vector2(90, 20)

[node name="Node2D" type="Node2D"]
script = ExtResource("5")
metadata/_edit_vertical_guides_ = [55.0]
metadata/_edit_horizontal_guides_ = [228.0]

[node name="Background" type="TextureRect" parent="."]
offset_left = 2.0
offset_right = 322.0
offset_bottom = 240.0
texture = ExtResource("4")

[node name="settingsTouch" type="TouchScreenButton" parent="."]
visible = false
position = Vector2(258, 219)
shape = SubResource("1")

[node name="Settings" type="RichTextLabel" parent="."]
visible = false
offset_left = 223.0
offset_top = 210.0
offset_right = 304.0
offset_bottom = 230.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("1")
text = "Opcions"

[node name="allsrings" type="TextureRect" parent="."]
offset_left = 72.0
offset_top = 21.0
offset_right = 232.0
offset_bottom = 141.0
texture = ExtResource("2")

[node name="Allimpic" type="RichTextLabel" parent="."]
offset_left = 4.0
offset_right = 204.0
offset_bottom = 40.0
theme_override_colors/default_color = Color(0.466667, 0.113725, 0.113725, 1)
theme_override_fonts/normal_font = SubResource("2")
text = "Allimpic"

[node name="Games" type="RichTextLabel" parent="."]
offset_left = 245.0
offset_top = 106.0
offset_right = 445.0
offset_bottom = 146.0
theme_override_colors/default_color = Color(0.466667, 0.113725, 0.113725, 1)
theme_override_fonts/normal_font = SubResource("2")
text = "Games"

[node name="allimpictouch" type="TouchScreenButton" parent="."]
position = Vector2(103, 190)
shape = SubResource("3")

[node name="info" type="RichTextLabel" parent="."]
offset_left = 56.0
offset_top = 180.0
offset_right = 153.0
offset_bottom = 201.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = SubResource("4")
text = "Info"

[node name="practicarTouch" type="TouchScreenButton" parent="."]
position = Vector2(224, 189)
shape = SubResource("7")

[node name="redefine" type="RichTextLabel" parent="."]
offset_left = 180.0
offset_top = 180.0
offset_right = 279.0
offset_bottom = 201.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = SubResource("8")
text = "redefinir "

[node name="2playertouch" type="TouchScreenButton" parent="."]
position = Vector2(222, 160)
shape = SubResource("11")

[node name="playerTwo" type="RichTextLabel" parent="."]
offset_left = 177.0
offset_top = 150.0
offset_right = 274.0
offset_bottom = 171.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = SubResource("9")
text = "2 Jugadors"

[node name="1playertouch" type="TouchScreenButton" parent="."]
position = Vector2(100, 160)
shape = SubResource("10")

[node name="playerOne" type="RichTextLabel" parent="."]
offset_left = 56.0
offset_top = 150.0
offset_right = 153.0
offset_bottom = 171.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = SubResource("9")
text = "1 Jugador"

[node name="focusAll" type="Sprite2D" parent="."]
position = Vector2(43, 161)
texture = ExtResource("6_tghwv")

[node name="ListPlayedGames" type="TextureRect" parent="."]
visible = false
offset_left = 33.0
offset_top = 36.0
offset_right = 300.0
offset_bottom = 213.0
texture = ExtResource("4")
expand_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="ListPlayedGames"]
layout_mode = 0
offset_left = 20.0
offset_top = 4.0
offset_right = 258.0
offset_bottom = 29.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3")
theme_override_font_sizes/normal_font_size = 14
text = "Llista Jocs pendents i jugats"

[node name="ItemList" type="ItemList" parent="ListPlayedGames"]
layout_mode = 0
offset_left = 6.0
offset_top = 30.0
offset_right = 261.0
offset_bottom = 137.0
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 10
item_count = 4
max_columns = 4
fixed_column_width = 50
item_0/text = "Nick"
item_1/text = "Temps"
item_2/text = "Guanyat"
item_3/text = "Joc"

[node name="Button" type="Button" parent="ListPlayedGames"]
layout_mode = 0
offset_left = 111.0
offset_top = 142.0
offset_right = 174.0
offset_bottom = 165.0
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 12
text = "D' Acord"

[node name="Puntuacions" type="RichTextLabel" parent="."]
offset_left = 56.0
offset_top = 213.0
offset_right = 167.0
offset_bottom = 235.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3")
text = "Puntuacions"

[node name="Puntuacions2" type="RichTextLabel" parent="."]
visible = false
offset_left = 217.0
offset_top = 212.0
offset_right = 328.0
offset_bottom = 234.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3")
text = "Info"

[connection signal="pressed" from="settingsTouch" to="." method="_on_TouchScreenButton_pressed" binds= ["btnSettings"]]
[connection signal="pressed" from="allimpictouch" to="." method="_on_TouchScreenButton_pressed" binds= ["btnCompetir"]]
[connection signal="pressed" from="practicarTouch" to="." method="_on_TouchScreenButton_pressed" binds= ["btnPracticar"]]
[connection signal="pressed" from="2playertouch" to="." method="_on_TouchScreenButton_pressed" binds= ["btnPlayer2"]]
[connection signal="pressed" from="1playertouch" to="." method="_on_TouchScreenButton_pressed" binds= ["btnPlayer1"]]
[connection signal="pressed" from="ListPlayedGames/Button" to="." method="_on_TouchScreenButton_pressed" binds= ["btnDacord"]]
